# SpessC

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
engine/config/: engine.toml
engine/includes/: engine.h
engine/includes/config/: config.h  loadconfig.h
engine/includes/renderer/: render.h  renderer.h
engine/includes/runtime/: runtime.h
engine/includes/utils/: utils.h
engine/source/config/: loadconfig.c
engine/source/renderer/: render.c
engine/source/runtime/: main.c
engine/source/utils/: toml.c
